easier openapi/impl
