# internal/inventoryapi/model_equipment.go
@@ -22,18 +22,7 @@ type Equipment struct {
 	// Unique inventory/asset number
 	InventoryNumber string `json:"inventoryNumber"`
 
-	SerialNumber string `json:"serialNumber,omitempty"`
-
-	Manufacturer string `json:"manufacturer,omitempty"`
-
-	Model string `json:"model,omitempty"`
-
-	PurchaseDate string `json:"purchaseDate,omitempty"`
-
 	WarrantyExpiry string `json:"warrantyExpiry,omitempty"`
-
-	// Expected operational lifespan in years
-	LifespanYears int32 `json:"lifespanYears,omitempty"`
 
 	// Current location ID
 	LocationId string `json:"locationId"`
